<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/grey_border"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/profile_initials"
        app:layout_constraintTop_toTopOf="@id/profile_initials">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/vishal_singh"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/noida_testing"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />

            <TextView
                android:id="@+id/profile_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/within_500_600_m"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_location" />

            <ProgressBar
                android:id="@+id/profile_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:progress="50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_distance" />

            <TextView
                android:id="@+id/tv_profile_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/profile_score_50"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/profile_score"
                app:layout_constraintTop_toTopOf="@id/profile_score" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/name_layout"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <ImageView
                android:id="@+id/ic_call"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/phone_call"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_addFriend"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/add_friend"
                app:layout_constraintStart_toEndOf="@id/ic_call"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_location"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/gps"
                app:layout_constraintStart_toEndOf="@id/ic_addFriend"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_details">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/iconset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <!-- Icons for Coffee, Business, Friendship -->
            <ImageView
                android:id="@+id/icon_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_coffee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/coffee"
                android:textColor="@color/maroon"
                app:layout_constraintStart_toEndOf="@id/icon_coffee"
                app:layout_constraintTop_toTopOf="@id/icon_coffee" />

            <ImageView
                android:id="@+id/icon_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:src="@drawable/ic_business"
                app:layout_constraintStart_toEndOf="@id/tv_coffee"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/business"
                android:textColor="@color/maroon"
                app:layout_constraintStart_toEndOf="@id/icon_business"
                app:layout_constraintTop_toTopOf="@id/icon_coffee" />

            <ImageView
                android:id="@+id/icon_friendship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:src="@drawable/ic_friendship"
                app:layout_constraintStart_toEndOf="@id/tv_business"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_friendship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/frienship"
                android:textColor="@color/maroon"
                app:layout_constraintStart_toEndOf="@id/icon_friendship"
                app:layout_constraintTop_toTopOf="@id/icon_coffee" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/profile_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hi_community_i_am_open_to_new_connections"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconset" />

            <TextView
                android:id="@+id/profile_experience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/i_have_1_year_experience"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_message" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_initials"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circle_background"
        android:gravity="center"
        android:text="VS"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/invite_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

